<resources>
    <string name="app_name">Balusha</string>
    <string name="breed_mask">Breed:</string>
    <string name="photo_of_dog">Photo of dog</string>
    <string name="fab_main">main fab</string>
    <string name="photo_of_owner">photo of owner</string>
    <string name="country_mask">Country:</string>
    <string name="city_mask">City:</string>
    <string name="street_mask">Street:</string>
    <string name="house_mask">House:</string>
    <string name="bldng_mask">Building:</string>
    <string name="apt_mask">Apartment:</string>
    <string name="phone_mask">Phone number:</string>
    <string name="email_mask">Email:</string>
    <string name="back_to_main">back to main</string>
    <string name="btn_owners_bio_edit">button owners bio edit</string>
    <string name="fab_owners_bio">fab in owners bio</string>
    <string name="owners_name_mask">Your name:</string>
    <string name="owners_surname_mask">Your surname:</string>
    <string name="hint_name">Your name</string>
    <string name="hint_surname">Your surname</string>
    <string name="hint_country">country</string>
    <string name="hint_city">city</string>
    <string name="hint_street">street</string>
    <string name="hint_house">house</string>
    <string name="hint_bldng">building</string>
    <string name="hint_phone">phone number</string>
    <string name="hint_email">email</string>
    <string name="fill_name_alert">Please fill in your name and surname</string>
    <string name="fill_info_alert">Please fill in required information</string>
    <string name="fab_owners_bio_add">fab in owners bio add</string>
    <string name="fab_owners_bio_edit">fab in owners bio edit</string>
    <string name="birth_mask">Date of birth:</string>
    <string name="sex_mask">Sex:</string>
    <string name="color_mask">Color:</string>
    <string name="tag_mask">Tatoo (tag) number:</string>
    <string name="marks_mask">Distinguishing marks:</string>
    <string name="pedigree_mask">Pedigree number:</string>
    <string name="chip_number_mask">Microchip number:</string>
    <string name="chip_loc_mask">Microchip location:</string>
    <string name="impl_date_mask">Microchip implantation date:</string>
    <string name="comment_mask">Owner\'s comment:</string>
    <string name="btn_owners_bio">button owners bio</string>
    <string name="btn_pets_bio_edit">button pets bio edit</string>
    <string name="fab_pets_bio">fab in pets bio</string>
    <string name="pets_name_mask">Name of dog:</string>
    <string name="hint_name_dog">Name of dog</string>
    <string name="hint_birth">date of birth</string>
    <string name="hint_sex">sex</string>
    <string name="hint_breed">breed</string>
    <string name="hint_color">color</string>
    <string name="hint_tag">tatoo (tag) number</string>
    <string name="hint_apt">apartment</string>
    <string name="hint_marks">distinguishing marks</string>
    <string name="hint_pedigree">pedigree number</string>
    <string name="hint_chip_number">microchip number</string>
    <string name="hint_impl_date">implantation date</string>
    <string name="hint_chip_loc">microchip location</string>
    <string name="hint_comment">some funny owner\'s comment</string>
    <string name="fab_pets_bio_add">fab in pets bio add</string>
    <string name="fab_pets_bio_edit">fab in pets bio edit</string>

    <string name="menuitem_my_pet">My pet</string>
    <string name="menuitem_vaccine">Vaccination</string>
    <string name="menuitem_helminths">Helminths treatment</string>
    <string name="menuitem_fleas">Fleas and ticks</string>
    <string name="menuitem_repr">Reproduction</string>
    <string name="menuitem_settings">Settings</string>

    <string name="no_photo">No photo</string>
    <string name="my_vaccinations">Vaccinations</string>
    <string name="helminths">Helminths treatment</string>
    <string name="new_vaccine">New vaccination</string>
    <string name="vaccine">Vaccine</string>
    <string name="date_mask">Date:</string>
    <string name="date">date</string>
    <string name="type_vaccine_mask">Type of vaccine:</string>
    <string name="rabies">Rabies</string>
    <string name="dhppi">Distemper, Hepatitis, Leptospirosis…</string>
    <string name="batch_number_mask">Batch №:</string>
    <string name="batch_number">batch number</string>
    <string name="clinic_mask">Veterinary clinic:</string>
    <string name="clinic">veterinary clinic</string>
    <string name="vaccine_name_mask">Vaccine name:</string>
    <string name="vaccine_name">vaccine name</string>
    <string name="no_vaccines_added">No vaccinations added</string>
    <string name="my_helminths">My helminths treatment</string>
    <string name="no_helminths_added">No treatments added</string>
    <string name="new_helminths">New helminths treatment</string>
    <string name="treatment_name_mask">Helminths treatment name:</string>
    <string name="treatment_name">helminths treatment name</string>
    <string name="dose_mask">Dose:</string>
    <string name="dose">dose</string>
    <string name="my_fleas">My fleas and ticks treatment</string>
    <string name="no_fleas_added">No treatments added</string>
    <string name="new_fleas">New fleas and ticks treatment</string>
    <string name="treatment_name_mask_flea">Fleas and ticks treatment name:</string>
    <string name="treatment_name_flea">fleas and ticks treatment name</string>
    <string name="remove_item">Remove item</string>
    <string name="warning">Are you sure you want to delete data?</string>
    <string name="date_repr_birth">Date of birth:</string>
    <string name="number_of_puppies_mask">Number of puppies:</string>
    <string name="my_repro">Reproduction</string>
    <string name="no_repro_added">No reproduction info added</string>
    <string name="new_repro">New reproduction</string>
    <string name="date_estrus_mask">Date of estrus:</string>
    <string name="date_estrus_hint">date of estrus</string>
    <string name="date_mating_mask">Date of mating:</string>
    <string name="date_mating_hint">date of mating</string>
    <string name="date_birth_hint">date of birth</string>
    <string name="number_of_puppies_hint">number of puppies</string>
    <string name="comments_mask">Comments:</string>
    <string name="comments_hint">comments</string>
    <string name="reproduction">Reproduction</string>
    <string name="notifications">Notifications</string>
    <string name="sound">Sound</string>
    <string name="vibration">Vibration</string>
    <string name="notification_time">Notification time</string>
    <string name="notification_day">Notification day</string>
    <string name="notification_light">Notification light</string>
    <string name="no_notif_added">No notifications added</string>
    <string name="dark_mode">Dark mode</string>

    <string name="balusha">Balusha</string>
    <string name="validation_new_fleas">Treatment name and date shouldn\'t be empty</string>
    <string name="validation_new_repro">Date of birth and number of puppies shouldn\'t be empty</string>

    <string name="note_color_purple">purple</string>
    <string name="note_color_blue">blue</string>
    <string name="note_color_teal">teal</string>
    <string name="note_color_green">green</string>
    <string name="note_color_red">red</string>
    <string name="note_color_orange">orange</string>

    <string name="note_one_title">First Note</string>
    <string name="note_one_body">This is your first note details. Do long press on note for options</string>
    <string name="note_second_title">Second Color Note</string>
    <string name="note_second_body">This is your second color note details with blue body</string>
    <string name="note_third_title">Third Color Note</string>
    <string name="note_third_body">This is your third reminder note details. You will get reminder about this note at %s</string>

    <string name="note_title_hint">Add Note Title Here</string>
    <string name="note_save">Save</string>
    <string name="intent_extra_id">note_id</string>
    <string name="note_reminder_info">Reminder on %s</string>
    <string name="validation_new_note">Note Should Not Be Empty</string>
    <string name="note_start_typing">Start typing</string>
    <string name="info_saved">Information saved</string>
    <string name="apply">Apply</string>
    <string name="undo">Undo</string>
    <string name="info_deleted">Information deleted</string>
    <string name="cancel">Cancel</string>
    <string name="share">Share Notification Via</string>

    <string name="nav1_clicked">Bottom Navigation Drawer menu item 1</string>
    <string name="nav2_clicked">Bottom Navigation Drawer menu item 2</string>
    <string name="nav3_clicked">Bottom Navigation Drawer menu item 3</string>

</resources>