<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/menu_my_pet"
            android:title="@string/menuitem_my_pet" />
        <item
            android:id="@+id/menu_vaccination"
            android:title="@string/menuitem_vaccine" />
        <item
            android:id="@+id/menu_helminths"
            android:title="@string/menuitem_helminths" />
        <item
            android:id="@+id/menu_fleas"
            android:title="@string/menuitem_fleas" />
        <item
            android:id="@+id/menu_reproduction"
            android:title="@string/menuitem_repr" />
        <item
            android:id="@+id/menu_settings"
            android:title="@string/menuitem_settings" />
    </group>
</menu>