<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

<ScrollView
    android:id="@+id/scroll_view_owners_add_bio"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">
    <LinearLayout
        android:id="@+id/layout_owners_bio_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/photo_of_owner_in_bio_add"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                android:background="@color/light_green"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/photo_of_owner" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="bottom">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/owners_name_mask"
                    android:textColor="@color/orange"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:layout_gravity="bottom"/>
                <EditText
                    android:id="@+id/name_of_owner_in_bio_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:hint="@string/hint_name"
                    android:textColor="@color/orange"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:layout_gravity="bottom"
                    android:inputType="textPersonName"
                    android:autofillHints="" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/owners_surname_mask"
                    android:textColor="@color/orange"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:layout_gravity="bottom"/>
                <EditText
                    android:id="@+id/surname_of_owner_in_bio_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:hint="@string/hint_surname"
                    android:textColor="@color/orange"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:layout_gravity="bottom"
                    android:inputType="textPersonName"
                    android:autofillHints="" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/country_mask"
                android:textColor="@color/text_green"
                android:textSize="24sp" />
            <EditText
                android:id="@+id/country_in_bio_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_country"
                android:textColor="@color/medium_green"
                android:textSize="24sp"
                android:inputType="text"
                android:autofillHints="" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/city_mask"
                android:textColor="@color/text_green"
                android:textSize="24sp" />
            <EditText
                android:id="@+id/city_in_bio_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:hint="@string/hint_city"
                android:textColor="@color/medium_green"
                android:textSize="24sp"
                android:inputType="text"
                android:autofillHints="" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/street_mask"
                android:textColor="@color/text_green"
                android:textSize="24sp" />
            <EditText
                android:id="@+id/street_in_bio_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:hint="@string/hint_street"
                android:textColor="@color/medium_green"
                android:textSize="24sp"
                android:inputType="text"
                android:autofillHints="" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/house_mask"
                android:textColor="@color/text_green"
                android:textSize="24sp" />
            <EditText
                android:id="@+id/house_in_bio_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:hint="@string/hint_house"
                android:textColor="@color/medium_green"
                android:textSize="24sp"
                android:inputType="number"
                android:autofillHints="" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/bldng_mask"
                android:textColor="@color/text_green"
                android:textSize="24sp" />
            <EditText
                android:id="@+id/building_in_bio_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:hint="@string/hint_bldng"
                android:textColor="@color/medium_green"
                android:textSize="24sp"
                android:inputType="number"
                android:autofillHints="" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/apt_mask"
                android:textColor="@color/text_green"
                android:textSize="24sp" />
            <EditText
                android:id="@+id/apt_in_bio_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:hint="@string/hint_apt"
                android:textColor="@color/medium_green"
                android:textSize="24sp"
                android:inputType="number"
                android:autofillHints="" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/phone_mask"
                android:textColor="@color/text_green"
                android:textSize="24sp" />
            <EditText
                android:id="@+id/phone_number_in_bio_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:hint="@string/hint_phone"
                android:textColor="@color/medium_green"
                android:textSize="24sp"
                android:inputType="phone"
                android:autofillHints="" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/email_mask"
                android:textColor="@color/text_green"
                android:textSize="24sp" />
            <EditText
                android:id="@+id/email_in_bio_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:hint="@string/hint_email"
                android:textColor="@color/medium_green"
                android:textSize="24sp"
                android:inputType="textEmailAddress"
                android:autofillHints="" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@id/scroll_view_owners_add_bio"
        app:layout_constraintStart_toStartOf="@id/scroll_view_owners_add_bio">


        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottom_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:backgroundTint="@color/medium_green"
            app:fabAlignmentMode="end" />
        <ImageButton
            android:id="@+id/button_back_to_menu_owners_bio_add"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_baseline_menu_open_24"
            android:backgroundTint="@color/background"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="15dp"
            android:layout_gravity="bottom"
            android:contentDescription="@string/back_to_main" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_in_owners_bio_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange"
            android:src="@drawable/ic_baseline_done_24"
            app:layout_anchor="@id/bottom_app_bar"
            android:contentDescription="@string/fab_owners_bio_add" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</androidx.constraintlayout.widget.ConstraintLayout>