<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:background="@color/background">

    <TextView
        android:id="@+id/title_in_fleas_add"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/new_fleas"
        android:textColor="@color/orange"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/fleas_treat_mask_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/treatment_name_mask_flea"
        android:textColor="@color/text_green"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/title_in_fleas_add"
        app:layout_constraintStart_toStartOf="@id/title_in_fleas_add"/>
    <EditText
        android:id="@+id/name_fleas_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/treatment_name_flea"
        android:textColor="@color/medium_green"
        android:textSize="24sp"
        android:inputType="text"
        android:autofillHints="testHint"
        app:layout_constraintTop_toBottomOf="@id/fleas_treat_mask_add"
        app:layout_constraintStart_toStartOf="@id/fleas_treat_mask_add"/>

    <TextView
        android:id="@+id/fleas_date_mask_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/date_mask"
        android:textColor="@color/text_green"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/name_fleas_add"
        app:layout_constraintStart_toStartOf="@id/name_fleas_add"/>
    <EditText
        android:id="@+id/date_in_fleas_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:hint="@string/date"
        android:textColor="@color/medium_green"
        android:textSize="24sp"
        android:maxLines="1"
        android:inputType="date"
        android:focusable="false"
        app:layout_constraintTop_toBottomOf="@id/name_fleas_add"
        app:layout_constraintStart_toEndOf="@id/fleas_date_mask_add"/>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottom_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:backgroundTint="@color/medium_green"
            app:fabAlignmentMode="end"
            app:hideOnScroll="true"
            app:layout_scrollFlags="scroll|enterAlways" />
        <ImageButton
            android:id="@+id/back_to_menu_fleas_add"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_baseline_menu_open_24"
            android:backgroundTint="@color/background"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="15dp"
            android:layout_gravity="bottom"
            android:contentDescription="@string/back_to_main" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_fleas_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange"
            android:contentDescription="@string/fab_pets_bio_add"
            android:src="@drawable/ic_baseline_done_24"
            app:layout_anchor="@id/bottom_app_bar" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>